# SOMKE

./: .gitignore  CMakeLists.txt
include/SOMKE/: Kernel.h  SOMKEAlgorithm.h  SOMKEMergingStrategy.h  SOMSequence.h  SOMSequenceEntry.h  wtm_localized_training_algorithm.h
src/: SOMKEAlgorithm.cpp
